[package]
name = "rustivate"
version = "0.1.0"
authors = ["fukatani <nannyakannya@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.3.3"
dirs = "3.0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
